--- a/Assignment-4/code/src/Postview.css
+++ b/Assignment-4/code/src/Postview.css
@@ -1,6 +1,16 @@
-.site-container{
-  text-align: center;
+.site-container {
+  
+  width: 38vw;
+  height: 100%;
+  margin-left: 32%;
+  margin-right: 20%;
+  
 }
+
+ html,body,#root{
+  width: 100%;
+  height: 100%;
+} 
 html {
   font-size: 14px;
 }
@@ -9,3 +19,113 @@ body {
   color: black;
   margin:0;
 } 
+.Instagram {
+  width: 100%;
+  height: 106vh;
+}
+.Nav {
+  width: 100%;
+  height: 10%;
+ 
+  
+}
+img.inst-icona {
+  width: 20px;
+  padding-left: 201px;
+}
+.main {
+  border: 0.3px solid #bbb;
+  margin-bottom: 14px;
+}
+.Nav p {
+  font-size: 20px;
+  font-weight: bolder;
+  color: green;
+  display: inline-block;
+  padding-left: 9px;
+ 
+}
+img.camera {
+  width: 42px;
+  
+  display: inline-block;
+  float: right;
+  padding-right: 103px;
+  padding-top: 16px;
+}
+img.inst-icon {
+  width: 23px;
+  display: inline-block;
+  padding-left: 215px;
+}
+.Header {
+  height: 12%;
+  display: flex;
+  justify-content: space-between;
+}
+.Info {
+  padding: 4px;
+  padding-left: 12px;
+}
+p.Name {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 700;
+}
+p.Location {
+  margin: 0;
+  color: #bbb;
+}
+.MoreInfo {
+  padding: 11px;
+  font-size: 27px;
+  font-weight: 700;
+}
+.image {
+  height: 56%;
+  width: 100%;
+}
+img.img {
+  width: 100%;
+  height: 100%;
+}
+img.like {
+  width: 38px;
+  padding: 5px;
+  padding-top: 0px;
+}
+img.share {
+  width: 38px;
+  padding: 5px;
+  padding-top: 0px;
+}
+.Post-Info {
+  height: 6%;
+  display: flex;
+  justify-content: space-between;
+}
+.Post-On p {
+  margin-right: 0.7rem;
+  padding: 0;
+  font-weight: 500;
+}
+p.Likes-Count {
+  padding-left: 20px;
+  padding-top: 0;
+  margin-top: 1px;
+}
+.Likes {
+  height: 3%;
+}
+.Content {
+  height: 66%;
+}
+.Footer {
+  height: 20%;
+}
+p.Caption {
+  padding-left: 9px;
+  font-size: 19px;
+  margin-top: 1px;
+ 
+}
